# lgatr

./: .buildinfo  CHANGELOG.md  README.md  api.html  architecture.html  attention_backends.html  attentionbackends.html  genindex.html  geometric_algebra.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  quickstart_slim.html  requirements.txt  search.html  searchindex.js  symmetry_breaking.html  symmetrybreaking.html
.github/workflows/: docs.yaml  release.yaml  tests.yaml
_modules/: index.html
_modules/lgatr/interface/: axialvector.html  pseudoscalar.html  scalar.html  spurions.html  vector.html
_modules/lgatr/layers/: conditional_lgatr_block.html  dropout.html  layer_norm.html  lgatr_block.html  linear.html
_modules/lgatr/nets/: conditional_lgatr.html  conditional_lgatr_slim.html  lgatr.html  lgatr_slim.html
_modules/lgatr/primitives/: attention.html  bilinear.html  config.html  dropout.html  invariants.html  linear.html  nonlinearities.html  normalization.html
_sources/: attention_backends.rst.txt  attentionbackends.rst.txt  quickstart.rst.txt  quickstart_slim.rst.txt  symmetrybreaking.rst.txt
benchmarks/: README.md  bench_primitives.py  utils.py
docs/source/: api.rst  attention_backends.rst  attentionbackends.rst  conf.py  geometric_algebra.rst  index.rst  quickstart.rst  quickstart_slim.rst  symmetry_breaking.rst  symmetrybreaking.rst
examples/: demo_conditional_lgatr.ipynb  demo_lgatr.ipynb  quickstart.ipynb
lgatr/: __init__.py
lgatr/interface/: __init__.py  axialvector.py  pseudoscalar.py  scalar.py  spurions.py  vector.py
lgatr/layers/: __init__.py  conditional_lgatr_block.py  dropout.py  layer_norm.py  lgatr_block.py  linear.py
lgatr/layers/attention/: __init__.py  attention.py  config.py  cross_attention.py  qkv.py  self_attention.py
lgatr/layers/mlp/: __init__.py  config.py  geometric_bilinears.py  mlp.py  (+1 more)
lgatr/nets/: __init__.py  conditional_lgatr.py  conditional_lgatr_slim.py  config.py  lgatr.py  lgatr_slim.py
lgatr/primitives/: __init__.py  attention.py  bilinear.py  compile.py  config.py  dropout.py  invariants.py  linear.py  nonlinearities.py  normalization.py
lgatr/utils/: __init__.py  autocast.py  compile.py  einsum.py  misc.py
tests/helpers/: clifford.py  constants.py  equivariance.py  equivariance_noga.py  geometric_algebra.py  rand_lorentz.py
(+52 files in other folders)
